Hide horizontal scrollbar for therapies.  Add border to card adjust height

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,13 @@
 html {
   background-color: #f7fee7;
 }
+
+/* Hide scroll Chrome Opera Safari */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
